--- a/src/components/Chart/ChartBar.css
+++ b/src/components/Chart/ChartBar.css
@@ -11,7 +11,7 @@
     width: 100%;
     border: 1px solid #313131;
     border-radius: 12px;
-    background-color: #c3b4f3;
+    background-color: #5871ee;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -19,7 +19,7 @@
   }
   
   .chart-bar__fill {
-    background-color: #4826b9;
+    background-color: #194ac8;
     width: 100%;
     transition: all 0.3s ease-out;
   }
