--- a/src/components/Expenses/ExpenseItem.css
+++ b/src/components/Expenses/ExpenseItem.css
@@ -30,7 +30,6 @@
     font-weight: bold;
     color: white;
     background-color: #3b41c2;
-    border: 1px solid white;
     padding: 0.5rem;
     border-radius: 12px;
   }
@@ -51,4 +50,22 @@
       font-size: 1.25rem;
       padding: 0.5rem 1.5rem;
     }
+  
+  .change-button {
+    font: inherit;
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+    border: 1px solid #3737dc;
+    background-color: #3037c4;
+    color: white;
+    border-radius: 12px;
+    margin-right: 1rem;
+    margin-left: 1rem;
+
   }
+  .change-button:hover,
+  .change-button:active {
+    background-color: #1b10b5;
+    border-color: #150674;
+  }
+}
