--- a/src/components/ExpensesFilter.css
+++ b/src/components/ExpensesFilter.css
@@ -1,5 +1,5 @@
 .expenses-filter {
-    color:#d3d3d3;
+    color:white;
     padding: 0 1rem;
   }
   
@@ -24,5 +24,5 @@
   }
 
   .filter-options {
-    background-color: #d3d3d3;;
+    background-color: white;
   }
