--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -10,7 +10,7 @@
 
   .chart-title {
     font-size: 15px;
-    color:#d3d3d3;    
+    color:white;    
     font-weight: bold;
     margin-bottom: 1.5rem;
     padding-left: 15px;
