--- a/src/components/Expenses/ExpenseDate.css
+++ b/src/components/Expenses/ExpenseDate.css
@@ -3,9 +3,9 @@
     flex-direction: column;
     width: 5.5rem;
     height: 5.5rem;
-    border: 1px solid #d3d3d3;
+    border: 1px solid white;
     background-color: #2a2a2a;
-    color:#d3d3d3;
+    color:white;
     border-radius: 12px;
     align-items: center;
     justify-content: center;
