--- a/src/components/Expenses/ExpenseItem.css
+++ b/src/components/Expenses/ExpenseItem.css
@@ -22,13 +22,13 @@
     font-size: 1rem;
     flex: 1;
     margin: 0 1rem;
-    color:#d3d3d3;
+    color:white;
   }
   
   .expense-item__price {
     font-size: 1rem;
     font-weight: bold;
-    color:#d3d3d3;
+    color:white;
     background-color: #1f2636;
     padding: 0.5rem;
     border-radius: 12px;
@@ -55,9 +55,9 @@
     font: inherit;
     cursor: pointer;
     padding: 0.5rem 1rem;
-    border: 1px solid #aaaaaa;
+    border: 1px solid white;
     background-color: #1f2636;
-    color: #aaaaaa;
+    color: white;
     border-radius: 12px;
     margin-right: 1rem;
     margin-left: 1rem;
@@ -66,14 +66,14 @@
   .change-button:hover,
   .change-button:active {
     background-color: #1e232d;
-    border-color: #aaaaaa;
+    border-color: white;
   }
 
   .change-title-input {
     font: inherit;
     padding: 0.3rem;
     border-radius: 6px;
-    border: 1px solid #d3d3d3;
+    border: 1px solid white;
     width: 10rem;
     max-width: 100%;
 
@@ -81,12 +81,12 @@
   .label-input {
     display: flex;
     flex-direction: column;
-    color:#aaaaaa;
+    color:white;
     margin-left: 20px;
   }
 
   .input {
-    background-color: #aaaaaa;
+    background-color: white;
   }
 
   .form {
