--- a/src/components/NewExpense/NewExpense.css
+++ b/src/components/NewExpense/NewExpense.css
@@ -7,16 +7,16 @@
     border-radius: 12px;
     text-align: center;
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
-    color:#d3d3d3;
+    color:white;
   }
   
   .new-expense button {
     font: inherit;
     cursor: pointer;
     padding: 1rem 2rem;
-    border: 1px solid #aaaaaa;
+    border: 1px solid white;
     background-color: #1f2636;
-    color:#d3d3d3;
+    color:white;
     border-radius: 12px;
     margin-right: 1rem;
     margin-top: 20px;
@@ -25,7 +25,7 @@
   .new-expense button:hover,
   .new-expense button:active {
     background-color: #1e232d;
-    border-color: #aaaaaa;
+    border-color: white;
   }
   
   .new-expense button.alternative {
@@ -40,8 +40,8 @@
   }
 
   .total-expense-title {
-    color:#d3d3d3;
-    font-size: 18px;
+    color:white;
+    font-size: 20px;
   }
 
   .total-expense-title-container {
